# LaunchPad

./: Cargo.toml  README.md  canbench.yml  canister_ids.json  create_account.sh  demopay.sh  deploy.sh  deploy_main.sh  deployicpledger.sh  deployindexcanister.sh  dfx.json  egparams.sh  fabricate_cycles.sh  package-lock.json  package.json  sell_icrc1_tokens.sh  test_fairlaunch.sh  tokendeploy.sh  transfer.sh  transfer_test.sh  transferfrom.sh
Scripts/: balance.sh  candidext.sh  transfer.sh
src/ic_asset_handler/: Cargo.toml  ic_asset_handler.did
src/ic_asset_handler/src/: api_admin.rs  api_http.rs  api_init.rs  api_query.rs  api_update.rs  bytes.rs  lib.rs  store.rs  types.rs
src/icplaunchpad_backend/: Cargo.toml  icplaunchpad_backend.did
src/icplaunchpad_backend/src/: api_query.rs  api_update.rs  heartbeat.rs  lib.rs  params.rs  state_handler.rs  task_scheduler.rs  transaction.rs  types.rs
src/icplaunchpad_frontend/: index.html  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1728298215134-a4743c242368c.mjs
src/icplaunchpad_frontend/src/: AllRoutes.jsx  App.jsx  ErrorBoundery.jsx  index.scss  main.css  main.jsx
src/icplaunchpad_frontend/src/Layout/: PrivateLayout.jsx
src/icplaunchpad_frontend/src/Pages/: ConnectFirst.jsx  CreatePreLaunch.jsx  Home.jsx  LaunchCoin.jsx
src/icplaunchpad_frontend/src/Pages/OwnerSection/: .TokenPage.jsx.swp  MobileViewTab.jsx  SaleStart.jsx  TokenPage.jsx
src/icplaunchpad_frontend/src/Pages/Profile/: Profile.jsx
src/icplaunchpad_frontend/src/Pages/Project/: MobileViewTab.jsx  ProjectList.jsx  project.jsx  projectpage.css
src/icplaunchpad_frontend/src/Pages/Projects/: ProjectCard.jsx  Projects.jsx
src/icplaunchpad_frontend/src/Pages/TokenPage/: TokenPage.jsx
src/icplaunchpad_frontend/src/Pages/VerifyToken/: StepProgressBar.jsx  VerifyToken.jsx
src/icplaunchpad_frontend/src/Redux-Config/: ReduxStore.js
src/icplaunchpad_frontend/src/Redux-Config/ReduxSlices/: TokenPresaleSlice.js  TokenSlice.js  UserSlice.js
src/icplaunchpad_frontend/src/auth/: useAuthClient.jsx
src/icplaunchpad_frontend/src/common/: AnimationButton.css  AnimationButton.jsx  ApproveOrRejectModal.jsx  ConnectWalletBtn.jsx  CopyToClipboard.jsx  GradientText.jsx  NavigationBlocker.js  NoDataFound.jsx  RaisedFundProgress.jsx  Reactselect.jsx  TokensValidation.js  UpdateTokenValidation.js  UpdateUserValidation.js  UserValidation.js  formatCycles.js  getSocialLogo.jsx
src/icplaunchpad_frontend/src/utils/: convertTimestampToIST.jsx  convertToBase64.js  fetchWithRetry.js  formatDateFromBigInt.js  tagsOptions.js  timeStampAgo.js
src/token_deployer/: token_deployer.did
(+107 files in other folders)
