[package]
name = "ic_asset_handler"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.5"
num-traits = "0.2"
bytes = "1"
candid = "0.10"
ciborium = "0.2"
# sha2 = "0.10"
sha3 = "0.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.8"
ic-stable-structures = "0.6"
ic-http-certification = { version = "2.5", features = ["serde"] }
hex = "0.4"
crc32fast = "1.4"
hmac = "0.12"
serde = "1"
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.21"
once_cell = "1.19"
hyperx = { git = "https://github.com/ldclabs/hyperx", version = "1.4" }
lazy_static = "1.4"