[package]
name = "icplaunchpad_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }  
base64 = "0.22.1"
candid = "0.10"
ic-cdk = "0.17.0"
ic-stable-structures = "0.6.5"
serde_bytes = "0.11"
serde_json = "1.0"
lazy_static = "1.4"
icrc-ledger-types= "0.1.5"
ic-ledger-types = "0.12.0"
url = "2.5.2"
canfund = "0.4.0"
futures = "0.3.31"
ic-cdk-macros = "0.17.0"
ic-cdk-timers = "0.9.0"
num-traits = "0.2.19"




